# ChromeReader

./: .gitignore  README.md  pyproject.toml
configs/: Stealer.json  Visualizer.json
examples/: Stealer.py  Telegram.py  Usage.py  Visualizer.py
src/ChromeReader/: Bookmarks.py  Folders.py  GUI.py  Helpers.py  History.py  LocalState.py  LoginData.py  ProfileManager.py  __init__.py  requirements.txt
src/ChromeReader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
